--- a/InOutManagement/InOutManagement/Info.plist
+++ b/InOutManagement/InOutManagement/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Wi-Fi 정보를 받아오기 위해 위치 권한이 필요합니다.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -22,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>백그라운드에서 네트워크 상태 확인을 위해 위치 권한을 &apos;항상 허용&apos;으로 설정해주세요.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>백그라운드에서 네트워크 상태 확인을 위해 위치 권한을 &apos;항상 허용&apos;으로 설정해주세요.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>네트워크 상태 확인을 위해 위치 권한을 허용해주세요.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -41,6 +45,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
