--- a/InOutManagement/InOutManagement/Info.plist
+++ b/InOutManagement/InOutManagement/Info.plist
@@ -21,9 +21,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>백그라운드에서 네트워크 상태 확인을 위해 위치 권한을 &apos;항상 허용&apos;으로 설정해주세요.</string>
+	<string>백그라운드에서 네트워크 상태 확인을 위해 위치 권한을 '항상 허용'으로 설정해주세요.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>백그라운드에서 네트워크 상태 확인을 위해 위치 권한을 &apos;항상 허용&apos;으로 설정해주세요.</string>
+	<string>백그라운드에서 네트워크 상태 확인을 위해 위치 권한을 '항상 허용'으로 설정해주세요.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>네트워크 상태 확인을 위해 위치 권한을 허용해주세요.</string>
 	<key>UIApplicationSceneManifest</key>
@@ -47,7 +47,10 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>location</string>
+		<string>processing</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
